2011-07-28  Paul Eggert  <eggert@cs.ucla.edu>

	* character.c (Fstring): Check for size-calculation overflow.

	* ccl.c: Integer and memory overflow fixes.
	(Fccl_execute_on_string): Check for memory overflow.
	Use ptrdiff_t rather than EMACS_INT where ptrdiff_t will do.
	Redo buffer-overflow calculations to avoid integer overflow.

	* callproc.c (child_setup): Don't assume strlen fits in int.

	* buffer.c: Memory overflow fixes.
	(overlays_at, overlays_in, record_overlay_string, overlay_strings):
	Don't update size of array until after memory allocation succeeds,
	because xmalloc/xrealloc may not return.

	* bidi.c: Integer overflow fix.
	(bidi_shelve_header_size): New constant.
	(bidi_cache_ensure_space, bidi_shelve_cache): Use it.
	(bidi_cache_ensure_space): Avoid integer overflow when allocating.

2011-07-19  Paul Eggert  <eggert@cs.ucla.edu>

	Use ptrdiff_t for composition IDs.
	* character.c (lisp_string_width):
	* composite.c (composition_table_size, n_compositions)
	(get_composition_id, composition_gstring_from_id):
	* dispextern.h (struct glyph_string.cmp_id, struct composition_it.id):
	* xdisp.c (BUILD_COMPOSITE_GLYPH_STRING):
	* window.c (Frecenter):
	Use ptrdiff_t, not int, for composition IDs.
	* composite.c (get_composition_id): Check for integer overflow.
	* composite.h: Adjust prototypes to match the above changes.

	Use ptrdiff_t for hash table indexes.
	* category.c (hash_get_category_set):
	* ccl.c (ccl_driver):
	* charset.h (struct charset.hash_index, CHECK_CHARSET_GET_ID):
	* coding.c (coding_system_charset_list, detect_coding_system):
	* coding.h (struct coding_system.id):
	* composite.c (get_composition_id, gstring_lookup_cache):
	* fns.c (hash_lookup, hash_put, Fgethash, Fputhash):
	* image.c (xpm_get_color_table_h):
	* lisp.h (hash_lookup, hash_put):
	* minibuf.c (Ftest_completion):
	Use ptrdiff_t for hash table indexes, not int (which is too
	narrow, on 64-bit hosts) or EMACS_INT (which is too wide, on
	32-bit --with-wide-int hosts).
